Add three files
I added three new files.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body>
     <script src="sketch.js" type="text/javascript"></script>
     <script src="person.js" type="text/javascript"></script>
+    <script src="scene.js" type="text/javascript"></script>
+    <script src="button.js" type="text/javascript"></script>
+    <script src="textBox.js" type="text/javascript"></script>
   </body>
 </html>
